# MySerial

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc  version.h.in
autobuild/: build.ps1  kill_MySerial.bat  main.ps1  nsis_MySerial.nsi  svn-update.ps1
common/: mysetting.cpp
doc/: document_easy.md  document_expert.md  document_produce.md
form/data/: formdata.cpp  formdata.h  formdata.ui
form/log/: formlog.cpp  formlog.h  formlog.ui
form/plot/: formplot.cpp  formplot.h  formplot.ui  formplotdata.cpp  formplotdata.h  formplothistory.cpp  formplothistory.h  formplothistory.ui  formplotsimulate.h  formplotsimulate.ui  plotworker.cpp  plotworker.h
form/serial/: formserial.cpp  formserial.h  formserial.ui
form/setting/: formsetting.cpp  formsetting.h  formsetting.ui  formtip.cpp  formtip.ui
include/: datadef.h  funcdef.h  keydef.h
main/: mainwindow.cpp  mainwindow.h  mainwindow.ui
res/i18n/: en.qm  en.ts  zh_simple.qm  zh_simple.ts  zh_traditional.qm  zh_traditional.ts
res/models/: airplane.gltf
res/themes/: Blue.qss  Dark.qss  HelloKitty.qss  Lite.qss  OSX_Dark.qss  OSX_Lite.qss
script/: fitting_points.py
server/: fit_sin.py
simulation/: 14.csv  24.csv  4.21.txt  5.23_4.txt  5.23_5.txt  5.26_1.csv  5.26_3.txt  512_TEST_16.txt  512_TEST_23.txt  521backdata_8.txt  README.md  correction.csv  correction.txt  correction_1.csv  cut_binary.py  cut_csv.py  cut_txt.py  main.py  send_binary.py  send_raw.py  to_raw14.py  to_raw24.py  verify_csv.csv  verify_max_neg_95.txt  verify_offset.txt
simulation/play/: main_mpu6050.py
simulation/tools/: find_ceff.py  show_distance.py
src/ThreadWorker/: threadworker.cpp  threadworker.h
src/ThreadWorker/MethodThreshold/: methodthreshold.cpp  methodthreshold.h
src/common/: UILogSink.h  findfwhm.cpp  findfwhm.h  findpeak.cpp  findpeak.h  mydir.cpp  mydir.h  mylog.cpp  mylog.h  myprocess.cpp  myprocess.h  mysetting.cpp  mysetting.h  processthread.cpp  processthread.h
src/enhance/: mychartview.h  peakcfg.cpp  peakcfg.h  peakcfg.ui
src/enhance/DraggableLine/: draggableline.cpp  draggableline.h
src/enhance/HoverSliderButton/: hoversliderbutton.cpp  hoversliderbutton.h
src/enhance/HoverTbtnButton/: hovertbtnbutton.cpp  hovertbtnbutton.h
src/enhance/MyChartView/: mychartview.cpp  mychartview.h
src/form/AutoUpdate/: autoupdate.cpp  autoupdate.h
src/form/FormExternal/: formexternal.cpp  formexternal.h
src/form/FormPlotCorrection/: formplotcorrection.cpp  formplotcorrection.h  formplotcorrection.ui
src/form/FormPlotCorrection/ShowCorrectionCurve/: showcorrectioncurve.cpp  showcorrectioncurve.h  showcorrectioncurve.ui
src/form/FormPlotCorrection/fitting/: formfittingarcsin.cpp  formfittingarcsin.h  formfittingarcsin.ui  formfittingkb.cpp  formfittingkb.h  formfittingkb.ui  formfittingpoints.cpp  formfittingpoints.h  formfittingpoints.ui  formfittingself.cpp  formfittingself.h  formfittingself.ui  formfittingsin.cpp  formfittingsin.h  formfittingsin.ui
src/form/FormPlotData/: formplotdata.cpp  formplotdata.h  formplotdata.ui
src/form/FormPlotHistory/: formplothistory.cpp  formplothistory.h  formplothistory.ui
src/form/FormPlotHistory/ShowData/: showdata.cpp  showdata.h  showdata.ui
src/form/FormPlotSimulate/: formplotsimulate.cpp  formplotsimulate.h  formplotsimulate.ui
src/form/data/: formdata.cpp  formdata.h  formdata.ui
src/form/log/: formlog.cpp  formlog.h  formlog.ui
src/form/play/: formplaympu6050.cpp  formplaympu6050.h  formplaympu6050.ui
src/form/plot/: formplot.cpp  formplot.h  formplot.ui  formplotcorrection.cpp  formplotcorrection.h  formplotcorrection.ui  formplotdata.cpp  formplotdata.h  formplotdata.ui  formplothistory.cpp  formplothistory.h  formplothistory.ui  formplotsimulate.cpp  formplotsimulate.h  formplotsimulate.ui  plot_algorithm.h  plotworker.cpp  plotworker.h
src/form/plot/3d/: myglcurvewidget.cpp  myglcurvewidget.h
src/form/plot/Accumulate/: accumulate.cpp  accumulate.h  accumulate.ui
src/form/plot/DarkSpectrum/: darkspectrum.cpp  darkspectrum.h  darkspectrum.ui
src/form/plot/Derivation/: derivation.cpp  derivation.h  derivation.ui
src/form/plot/FourierTransform/: fouriertransform.cpp  fouriertransform.h  fouriertransform.ui
src/form/plot/PeakTrajectory/: peaktrajectory.cpp  peaktrajectory.h  peaktrajectory.ui
src/form/plot/PointsTracker/: pointstracker.cpp  pointstracker.h  pointstracker.ui
src/form/plot/SignalNoiseRatio/: signalnoiseratio.cpp  signalnoiseratio.h  signalnoiseratio.ui
src/form/plot/TemperatureConversion/: temperatureconversion.cpp  temperatureconversion.h  temperatureconversion.ui
src/form/plot/TemperatureView/: temperatureview.cpp  temperatureview.h  temperatureview.ui
src/form/plot/enhance/: mychartview.cpp  mychartview.h
src/form/plot/fitting/: formfittingkb.cpp  formfittingkb.h  formfittingsin.cpp  formfittingsin.h
src/form/serial/: formserial.cpp  formserial.h  formserial.ui
src/form/serial/HandleModeEasy/: handlemodeeasy.cpp  handlemodeeasy.h
src/form/serial/HandleModeExpert/: handlemodeexpert.cpp  handlemodeexpert.h
src/form/serial/HandleModeProduce/: handlemodeproduce.cpp  handlemodeproduce.h
src/form/serial/LineSend/: linesend.cpp  linesend.h  linesend.ui
src/form/serial/SerialWorker/: serialworker.cpp  serialworker.h
src/form/serial/ThreadParser/: threadparser.cpp  threadparser.h
src/form/setting/: formsetting.cpp  formsetting.h  formsetting.ui  formtip.cpp  formtip.h  formtip.ui
src/include/: datadef.h  funcdef.h  global.h  keydef.h  plot_algorithm.h
src/main/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/mode/FormEasy/: formeasy.cpp  formeasy.h  formeasy.ui
src/mode/FormExpert/: formexpert.cpp  formexpert.h  formexpert.ui
src/mode/FormProduce/: formproduce.cpp  formproduce.h  formproduce.ui
src/mode/LoadingOverLay/: loadingoverlay.cpp  loadingoverlay.h
src/module/httpclient/: httpclient.cpp  httpclient.h
src/module/server/: server.cpp  server.h
tool/: requirements.txt  show_smoothed.py
(+31 files in other folders)
